2010-07-18  Andrew John Hughes  <ahughes@redhat.com>

	Allow all or individual test suites to be
	disabled.
	* Makefile.am:
	(TEST_SUITES): Test suites to run.
	(TESTS_TO_RUN): Dependencies of jtregcheck.
	(check-local): Re-enable.
	(.PHONY): Add jtregcheck.
	(jtregcheck): Use TEST_SUITES and TESTS_TO_RUN.
	* acinclude.m4:
	(IT_DISABLE_TESTS): New option to allow all tests
	to be turned off.
	(IT_DISABLE_HOTSPOT_TESTS): Likewise just for HotSpot tests.
	(IT_DISABLE_LANGTOOLS_TESTS): Likewise just for langtools tests.
	(IT_DISABLE_JDK_TESTS): Likewise just for JDK tests.
	* configure.ac:
	Call new macros.

2010-07-16  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-IcedTeaPlugin): Always check for existence
	before using rmdir.
	(clean-pulse-java): Likewise.

2010-07-06  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(PULSE_JAVA_BUILDDIR): Use a different name from
	the source directory to avoid confusion.

2010-07-16  Andrew John Hughes  <ahughes@redhat.com>

	Make variable naming clearer.  Replace bootstrap/boot,
	bootstrap/icedtea, bootstrap/jdk1.6.0 and $(PLUGIN_SRCDIR)/java
	throughout with variable equivalents.
	* Makefile.am:
	(BOOT_DIR): Renamed from ICEDTEA_BOOT_DIR.
	(RUNTIME): Renamed from ICEDTEA_RT.
	(ENDORSED_DIR): Renamed from ICEDTEA_ENDORSED_DIR.
	(CLS_DIR_BOOT): Renamed from ICEDTEA_CLS_DIR_BOOT.
	(STAGE1_BOOT_DIR): Shortcut for bootstrap/boot.
	(STAGE2_BOOT_DIR): Shortcut for bootstrap/icedtea.
	(LIVECONNECT_DIR): Match ordering used by IcedTea6.
	(LIVECONNECT_SRCS): Added from IcedTea6.
	(clean-bootstrap-directory-stage1): Delete produce before stamp,
	in case of failure.
	(clean-bootstrap-directory-stage2): Likewise.
	(clean-bootstrap-directory-symlink-stage1): Likewise.

2010-07-13  Mark Wielaard  <mjw@redhat.com>

	Reported by William Cohen <wcohen@redhat.com>
	* tapset/hotspot.stp.in (object_alloc): size is arg4, not arg3.

2010-07-15 Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/521
	* Makefile.am: